--- a/gst-plugin-closedcaption/Cargo.toml
+++ b/gst-plugin-closedcaption/Cargo.toml
@@ -7,18 +7,33 @@ edition = "2018"
 
 [dependencies]
 glib = { git = "https://github.com/gtk-rs/glib", features = ["subclassing"] }
-gstreamer = { git = "https://gitlab.freedesktop.org/gstreamer/gstreamer-rs", features = ["subclassing", "v1_10"] }
-gstreamer-base = { git = "https://gitlab.freedesktop.org/gstreamer/gstreamer-rs", features = ["subclassing", "v1_10"] }
-gstreamer-video = { git = "https://gitlab.freedesktop.org/gstreamer/gstreamer-rs", features = ["v1_10"] }
 combine = "3.6"
 either = "1"
 uuid = { version = "0.7", features = ["v4"] }
 chrono = "0.4"
 
+[dependencies.gst]
+git = "https://gitlab.freedesktop.org/gstreamer/gstreamer-rs"
+features = ["subclassing", "v1_10"]
+package="gstreamer"
+
+[dependencies.gst-base]
+git = "https://gitlab.freedesktop.org/gstreamer/gstreamer-rs"
+features = ["subclassing", "v1_10"]
+package="gstreamer-base"
+
+[dependencies.gst-video]
+git = "https://gitlab.freedesktop.org/gstreamer/gstreamer-rs"
+features = ["v1_10"]
+package="gstreamer-video"
+
 [dev-dependencies]
 pretty_assertions = "0.5.1"
-gstreamer-check = { git = "https://gitlab.freedesktop.org/gstreamer/gstreamer-rs" }
 rand = "0.6"
+
+[dev-dependencies.gst-check]
+git = "https://gitlab.freedesktop.org/gstreamer/gstreamer-rs"
+package="gstreamer-check"
 
 [lib]
 name = "gstrsclosedcaption"
