--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -49,7 +49,7 @@ stages:
     - cargo build --all --color=always
     - cargo test --all --color=always
 
-.test 1.31:
+test 1.31:
   # 1.31 img
   # https://hub.docker.com/_/rust/
   image: "rust:1.31-slim"
