--- a/gst-plugin-closedcaption/Cargo.toml
+++ b/gst-plugin-closedcaption/Cargo.toml
@@ -11,6 +11,7 @@ combine = "3.6"
 either = "1"
 uuid = { version = "0.7", features = ["v4"] }
 chrono = "0.4"
+lazy_static = "1.2"
 
 [dependencies.gst]
 git = "https://gitlab.freedesktop.org/gstreamer/gstreamer-rs"
