--- a/audio/audiofx/Cargo.toml
+++ b/audio/audiofx/Cargo.toml
@@ -3,7 +3,7 @@ name = "gst-plugin-audiofx"
 version = "0.6.0"
 authors = ["Sebastian Dröge <sebastian@centricular.com>"]
 repository = "https://gitlab.freedesktop.org/gstreamer/gst-plugins-rs"
-license = "MIT/Apache-2.0"
+license = "LGPL-2.1-or-later"
 description = "Rust AudioFx Plugin"
 edition = "2018"
 
