--- a/utils/fallbackswitch/Cargo.toml
+++ b/utils/fallbackswitch/Cargo.toml
@@ -42,4 +42,4 @@ pkg-config = "0.3"
 
 [features]
 default = ["glib-sys", "gobject-sys", "gst-sys", "libc"]
-#v1_18 = ["gstreamer-base/v1_18"]
+v1_18 = ["gst-base/v1_18"]
