--- a/video/rav1e/Cargo.toml
+++ b/video/rav1e/Cargo.toml
@@ -10,7 +10,7 @@ edition = "2018"
 [dependencies]
 glib = { git = "https://github.com/gtk-rs/glib" }
 gstreamer = { git = "https://gitlab.freedesktop.org/gstreamer/gstreamer-rs" }
-gstreamer-video = { git = "https://gitlab.freedesktop.org/gstreamer/gstreamer-rs" }
+gstreamer-video = { git = "https://gitlab.freedesktop.org/gstreamer/gstreamer-rs", features = ["v1_12"] }
 gstreamer-check = { git = "https://gitlab.freedesktop.org/gstreamer/gstreamer-rs" }
 rav1e = { version = "0.3", default-features = false }
 atomic_refcell = "0.1"
