--- a/video/gif/Cargo.toml
+++ b/video/gif/Cargo.toml
@@ -5,6 +5,7 @@ authors = ["Markus Ebner <info@ebner-markus.de>"]
 repository = "https://gitlab.freedesktop.org/gstreamer/gst-plugins-rs"
 license = "MIT/Apache-2.0"
 edition = "2018"
+description = "GStreamer GIF plugin"
 
 [dependencies]
 glib = { version = "0.10" }
