--- a/audio/audiofx/Cargo.toml
+++ b/audio/audiofx/Cargo.toml
@@ -16,7 +16,7 @@ byte-slice-cast = "0.3"
 num-traits = "0.2"
 lazy_static = "1.0"
 ebur128 = "0.1"
-nnnoiseless = "0.2"
+nnnoiseless = { version = "0.3", default-features = false }
 
 [lib]
 name = "gstrsaudiofx"
