--- a/deny.toml
+++ b/deny.toml
@@ -126,6 +126,12 @@ version = "0.4"
 name = "pin-project-internal"
 version = "0.4"
 
+# ignore duplicated crossbeam-utils dependency because rust-argon2 depend on an old version
+# https://github.com/sru-systems/rust-argon2/pull/39
+[[bans.skip]]
+name = "crossbeam-utils"
+version = "0.7"
+
 [sources]
 unknown-registry = "deny"
 unknown-git = "deny"
