--- a/video/rav1e/Cargo.toml
+++ b/video/rav1e/Cargo.toml
@@ -11,7 +11,7 @@ rust-version = "1.56"
 [dependencies]
 gst = { package = "gstreamer", git = "https://gitlab.freedesktop.org/gstreamer/gstreamer-rs" }
 gst-video = { package = "gstreamer-video", git = "https://gitlab.freedesktop.org/gstreamer/gstreamer-rs", features = ["v1_12"] }
-rav1e = { version = "0.4", default-features = false }
+rav1e = { version = "0.5", default-features = false }
 once_cell = "1.0"
 
 [dev-dependencies]
@@ -29,6 +29,7 @@ gst-plugin-version-helper = { path="../../version-helper" }
 # GStreamer 1.14 is required for static linking
 static = ["gst/v1_14"]
 capi = []
+asm = ["rav1e/asm"]
 
 [package.metadata.capi]
 min_version = "0.8.0"
