--- a/net/hlssink3/Cargo.toml
+++ b/net/hlssink3/Cargo.toml
@@ -23,7 +23,7 @@ gst-audio = { package = "gstreamer-audio", git = "https://gitlab.freedesktop.org
 gst-check = { package = "gstreamer-check", git = "https://gitlab.freedesktop.org/gstreamer/gstreamer-rs" }
 
 [build-dependencies]
-gst-plugin-version-helper = { git = "https://gitlab.freedesktop.org/gstreamer/gst-plugins-rs" }
+gst-plugin-version-helper = { path = "../../version-helper" }
 
 [lib]
 name = "gsthlssink3"
