--- a/plugins/Cargo.toml
+++ b/plugins/Cargo.toml
@@ -9,12 +9,12 @@ repository = "https://github.com/centricular/webrtcsink/"
 build = "build.rs"
 
 [dependencies]
-gst = { package = "gstreamer", git = "https://gitlab.freedesktop.org/gstreamer/gstreamer-rs", features = ["v1_20", "ser_de"] }
-gst-app = { package = "gstreamer-app", git = "https://gitlab.freedesktop.org/gstreamer/gstreamer-rs", features = ["v1_20"] }
-gst-video = { package = "gstreamer-video", git = "https://gitlab.freedesktop.org/gstreamer/gstreamer-rs", features = ["v1_20", "ser_de"] }
-gst-webrtc = { package = "gstreamer-webrtc", git = "https://gitlab.freedesktop.org/gstreamer/gstreamer-rs", features = ["v1_20"] }
-gst-sdp = { package = "gstreamer-sdp", git = "https://gitlab.freedesktop.org/gstreamer/gstreamer-rs", features = ["v1_20"] }
-gst-rtp = { package = "gstreamer-rtp", git = "https://gitlab.freedesktop.org/gstreamer/gstreamer-rs", features = ["v1_20"] }
+gst = { package = "gstreamer", version = "0.18", features = ["v1_20", "ser_de"] }
+gst-app = { package = "gstreamer-app", version = "0.18", features = ["v1_20"] }
+gst-video = { package = "gstreamer-video", version = "0.18", features = ["v1_20", "ser_de"] }
+gst-webrtc = { package = "gstreamer-webrtc", version = "0.18", features = ["v1_20"] }
+gst-sdp = { package = "gstreamer-sdp", version = "0.18", features = ["v1_20"] }
+gst-rtp = { package = "gstreamer-rtp", version = "0.18", features = ["v1_20"] }
 once_cell = "1.0"
 smallvec = "1"
 anyhow = "1"
@@ -29,7 +29,7 @@ fastrand = "1.0"
 
 [dev-dependencies]
 tracing = { version = "0.1", features = ["log"] }
-tracing-subscriber = { version = "0.2", features = ["registry", "env-filter"] }
+tracing-subscriber = { version = "0.3", features = ["registry", "env-filter"] }
 tracing-log = "0.1"
 uuid = { version = "0.8", features = ["v4"] }
 clap = { version = "3.0.0-rc.1", features = ["derive"] }
