--- a/video/rav1e/Cargo.toml
+++ b/video/rav1e/Cargo.toml
@@ -13,6 +13,7 @@ gst = { package = "gstreamer", git = "https://gitlab.freedesktop.org/gstreamer/g
 gst-video = { package = "gstreamer-video", git = "https://gitlab.freedesktop.org/gstreamer/gstreamer-rs", features = ["v1_12"] }
 rav1e = { version = "0.5", default-features = false }
 once_cell = "1.0"
+atomic_refcell = "0.1"
 
 [dev-dependencies]
 gst-check = { package = "gstreamer-check", git = "https://gitlab.freedesktop.org/gstreamer/gstreamer-rs" }
