--- a/plugins/Cargo.toml
+++ b/plugins/Cargo.toml
@@ -21,11 +21,11 @@ anyhow = "1"
 thiserror = "1"
 futures = "0.3"
 async-std = { version = "1", features = ["unstable"] }
-async-tungstenite = { version = "0.16", features = ["async-std-runtime", "async-native-tls"] }
+async-tungstenite = { version = "0.17", features = ["async-std-runtime", "async-native-tls"] }
 serde = "1"
-serde_derive = "1"
 serde_json = "1"
 fastrand = "1.0"
+webrtcsink-protocol = { version = "0.1", path="../protocol" }
 
 [dev-dependencies]
 tracing = { version = "0.1", features = ["log"] }
