--- a/plugins/Cargo.toml
+++ b/plugins/Cargo.toml
@@ -21,6 +21,7 @@ anyhow = "1"
 thiserror = "1"
 futures = "0.3"
 async-std = { version = "1", features = ["unstable"] }
+async-native-tls = { version = "0.4.0" }
 async-tungstenite = { version = "0.17", features = ["async-std-runtime", "async-native-tls"] }
 serde = "1"
 serde_json = "1"
