--- a/plugins/Cargo.toml
+++ b/plugins/Cargo.toml
@@ -27,6 +27,7 @@ serde = "1"
 serde_json = "1"
 fastrand = "1.0"
 webrtcsink-protocol = { version = "0.1", path="../protocol" }
+human_bytes = "0.3.1"
 
 [dev-dependencies]
 tracing = { version = "0.1", features = ["log"] }
