--- a/video/dav1d/Cargo.toml
+++ b/video/dav1d/Cargo.toml
@@ -14,6 +14,7 @@ dav1d = "0.8"
 gst = { package = "gstreamer", git = "https://gitlab.freedesktop.org/gstreamer/gstreamer-rs" }
 gst-base = { package = "gstreamer-base", git = "https://gitlab.freedesktop.org/gstreamer/gstreamer-rs" }
 gst-video = { package = "gstreamer-video", git = "https://gitlab.freedesktop.org/gstreamer/gstreamer-rs" }
+num_cpus = "1.0"
 once_cell = "1.0"
 
 [lib]
