--- a/video/videofx/Cargo.toml
+++ b/video/videofx/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 name = "gst-plugin-videofx"
 version = "0.9.0-alpha.1"
-authors = ["Sanchayan Maity <sanchayan@asymptotic.io>"]
+authors = ["Sanchayan Maity <sanchayan@asymptotic.io>", "Rafael Caricio <rafael@caricio.com>"]
 repository = "https://gitlab.freedesktop.org/gstreamer/gst-plugins-rs"
 license = "MPL-2.0"
 description = "Video Effects Plugin"
@@ -14,6 +14,10 @@ atomic_refcell = "0.1"
 once_cell = "1.0"
 color-thief = "0.2.2"
 color-name = "1.0.0"
+image = "0.24.2"
+image_hasher = "1.0.0"
+dssim-core = { version = "3.2.3", optional = true }
+rgb = { version = "0.8", optional = true }
 
 [dependencies.gst]
 git = "https://gitlab.freedesktop.org/gstreamer/gstreamer-rs"
@@ -46,6 +50,7 @@ gst-plugin-version-helper = { path="../../version-helper" }
 static = []
 capi = []
 doc = ["gst/v1_18"]
+dssim = ["dssim-core", "rgb"]
 
 [package.metadata.capi]
 min_version = "0.8.0"
