--- a/deny.toml
+++ b/deny.toml
@@ -136,6 +136,11 @@ version = "0.6"
 name = "wasi"
 version = "0.10"
 
+# ignore duplicated uuid dependency because librespot depends on an old version
+[[bans.skip]]
+name = "uuid"
+version = "0.8"
+
 [sources]
 unknown-registry = "deny"
 unknown-git = "deny"
@@ -145,4 +150,5 @@ allow-git = [
   "https://github.com/gtk-rs/gtk4-rs",
   "https://github.com/rust-av/ffv1",
   "https://github.com/rust-av/flavors",
+  "https://github.com/philn/color-thief-rs",
 ]
