--- a/plugins/Cargo.toml
+++ b/plugins/Cargo.toml
@@ -15,6 +15,7 @@ gst-video = { git="https://gitlab.freedesktop.org/gstreamer/gstreamer-rs", packa
 gst-webrtc = { git="https://gitlab.freedesktop.org/gstreamer/gstreamer-rs", package = "gstreamer-webrtc", features = ["v1_20"] }
 gst-sdp = { git="https://gitlab.freedesktop.org/gstreamer/gstreamer-rs", package = "gstreamer-sdp", features = ["v1_20"] }
 gst-rtp = { git="https://gitlab.freedesktop.org/gstreamer/gstreamer-rs", package = "gstreamer-rtp", features = ["v1_20"] }
+gst-utils = { git="https://gitlab.freedesktop.org/gstreamer/gstreamer-rs", package = "gstreamer-utils" }
 once_cell = "1.0"
 smallvec = "1"
 anyhow = "1"
