--- a/net/rusoto/Cargo.toml
+++ b/net/rusoto/Cargo.toml
@@ -15,13 +15,19 @@ bytes = "1.0"
 futures = "0.3"
 gst = { package = "gstreamer", git = "https://gitlab.freedesktop.org/gstreamer/gstreamer-rs" }
 gst-base = { package = "gstreamer-base", git = "https://gitlab.freedesktop.org/gstreamer/gstreamer-rs" }
+aws-config = "0.12.0"
+aws-sdk-s3 = "0.12.0"
+aws-sdk-transcribe = "0.12.0"
+aws-types = "0.12.0"
+aws-smithy-http = { version = "0.42.0", features = [ "rt-tokio" ] }
+aws-smithy-types = "0.42.0"
 rusoto_core = "0.48"
 rusoto_s3 = "0.48"
 rusoto_credential = "0.48"
 rusoto_signature = "0.48"
 url = "2"
 percent-encoding = "2"
-tokio = { version = "1.0", features = [ "rt-multi-thread", "time" ] }
+tokio = { version = "1.0", features = [ "full" ] }
 async-tungstenite = { version = "0.17", features = ["tokio", "tokio-runtime", "tokio-native-tls"] }
 nom = "7"
 crc = "3"
