--- a/net/rusoto/Cargo.toml
+++ b/net/rusoto/Cargo.toml
@@ -19,8 +19,11 @@ aws-config = "0.12.0"
 aws-sdk-s3 = "0.12.0"
 aws-sdk-transcribe = "0.12.0"
 aws-types = "0.12.0"
+aws-sig-auth = "0.12.0"
 aws-smithy-http = { version = "0.42.0", features = [ "rt-tokio" ] }
 aws-smithy-types = "0.42.0"
+http = "0.2.7"
+chrono = "0.4"
 rusoto_core = "0.48"
 rusoto_s3 = "0.48"
 rusoto_credential = "0.48"
