--- a/deny.toml
+++ b/deny.toml
@@ -101,19 +101,6 @@ version = "1.8"
 name = "heck"
 version = "0.3"
 
-# ignore duplicated env_logger dependency because librespot depends on an old version
-[[bans.skip]]
-name = "env_logger"
-version = "0.8"
-
-# ignore duplicated parking_lot dependency because librespot depends on an old version
-[[bans.skip]]
-name = "parking_lot"
-version = "0.11"
-[[bans.skip]]
-name = "parking_lot_core"
-version = "0.8"
-
 # ignore duplicated sha-1/digest/block-buffer dependencies because librespot depends on an old version
 [[bans.skip]]
 name = "block-buffer"
@@ -125,7 +112,7 @@ version = "0.9"
 name = "sha-1"
 version = "0.9"
 
-# ignore duplicated tokio-util dependency because librespot/reqwest depend on an old version
+# ignore duplicated tokio-util dependency because reqwest depend on an old version
 [[bans.skip]]
 name = "tokio-util"
 version = "0.6"
@@ -134,11 +121,6 @@ version = "0.6"
 [[bans.skip]]
 name = "wasi"
 version = "0.10"
-
-# ignore duplicated uuid dependency because librespot depends on an old version
-[[bans.skip]]
-name = "uuid"
-version = "0.8"
 
 [sources]
 unknown-registry = "deny"
