--- a/net/onvif/Cargo.toml
+++ b/net/onvif/Cargo.toml
@@ -16,7 +16,7 @@ gst-video = { package = "gstreamer-video", git = "https://gitlab.freedesktop.org
 once_cell = "1.0"
 xmlparser = "0.13"
 minidom = "0.14"
-chrono = "0.4"
+chrono = { version = "0.4", default-features = false }
 cairo-rs = { git = "https://github.com/gtk-rs/gtk-rs-core", features=["use_glib"] }
 pango = { git = "https://github.com/gtk-rs/gtk-rs-core" }
 pangocairo = { git = "https://github.com/gtk-rs/gtk-rs-core" }
