--- a/net/rusoto/Cargo.toml
+++ b/net/rusoto/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "gst-plugin-rusoto"
+name = "gst-plugin-aws"
 version = "0.9.0"
 authors = ["Arun Raghavan <arun@arunraghavan.net>",
            "Jordan Petridis <jordan@centricular.com>",
@@ -40,7 +40,7 @@ base32 = "0.4"
 backoff = { version = "0.4", features = [ "futures", "tokio" ] }
 
 [lib]
-name = "gstrusoto"
+name = "gstaws"
 crate-type = ["cdylib", "rlib"]
 path = "src/lib.rs"
 
