--- a/net/aws/Cargo.toml
+++ b/net/aws/Cargo.toml
@@ -38,6 +38,7 @@ serde_json = "1"
 atomic_refcell = "0.1"
 base32 = "0.4"
 backoff = { version = "0.4", features = [ "futures", "tokio" ] }
+gio = { git = "https://github.com/gtk-rs/gtk-rs-core.git", package = "gio" }
 
 [lib]
 name = "gstaws"
