--- a/deny.toml
+++ b/deny.toml
@@ -9,6 +9,8 @@ ignore = [
     "RUSTSEC-2021-0059",
     "RUSTSEC-2021-0060",
     "RUSTSEC-2021-0061",
+    # https://github.com/chronotope/chrono/issues/499
+    "RUSTSEC-2020-0071",
 ]
 
 [licenses]
