--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -271,4 +271,6 @@ coverage:
     paths:
       - 'coverage'
     reports:
-      cobertura: coverage.xml
+      coverage_report:
+        coverage_format: cobertura
+        path: coverage.xml
