--- a/video/videofx/Cargo.toml
+++ b/video/videofx/Cargo.toml
@@ -11,9 +11,7 @@ edition = "2021"
 cairo-rs = { git = "https://github.com/gtk-rs/gtk-rs-core", features=["use_glib"] }
 atomic_refcell = "0.1"
 once_cell = "1.0"
-# color-thief = "0.2"
-# https://github.com/RazrFalcon/color-thief-rs/pull/4
-color-thief = { git = "https://github.com/philn/color-thief-rs", branch = "max-colors-respect" }
+color-thief = "0.2.2"
 color-name = "1.0.0"
 
 [dependencies.gst]
