--- a/utils/tracers/Cargo.toml
+++ b/utils/tracers/Cargo.toml
@@ -11,6 +11,7 @@ description = "GStreamer tracers plugin"
 gst = { package = "gstreamer", git = "https://gitlab.freedesktop.org/gstreamer/gstreamer-rs" }
 once_cell = "1.0"
 anyhow = "1"
+regex = "1"
 
 [target.'cfg(unix)'.dependencies]
 signal-hook = "0.3"
@@ -26,6 +27,7 @@ gst-plugin-version-helper = { path="../../version-helper" }
 [features]
 static = []
 capi = []
+v1_22 = ["gst/v1_22"]
 
 [package.metadata.capi]
 min_version = "0.8.0"
