--- a/net/webrtc/Cargo.toml
+++ b/net/webrtc/Cargo.toml
@@ -16,6 +16,8 @@ gst-webrtc = { git="https://gitlab.freedesktop.org/gstreamer/gstreamer-rs", pack
 gst-sdp = { git="https://gitlab.freedesktop.org/gstreamer/gstreamer-rs", package = "gstreamer-sdp", features = ["v1_20"] }
 gst-rtp = { git="https://gitlab.freedesktop.org/gstreamer/gstreamer-rs", package = "gstreamer-rtp", features = ["v1_20"] }
 gst-utils = { git="https://gitlab.freedesktop.org/gstreamer/gstreamer-rs", package = "gstreamer-utils" }
+gst-base = { git="https://gitlab.freedesktop.org/gstreamer/gstreamer-rs", package = "gstreamer-base" }
+
 once_cell = "1.0"
 anyhow = "1"
 thiserror = "1"
@@ -29,6 +31,7 @@ serde_json = "1"
 fastrand = "1.0"
 gst_plugin_webrtc_protocol = { path="protocol", package = "gst-plugin-webrtc-signalling-protocol" }
 human_bytes = "0.4"
+url = "2"
 
 [dev-dependencies]
 tracing = { version = "0.1", features = ["log"] }
