--- a/net/webrtc/Cargo.toml
+++ b/net/webrtc/Cargo.toml
@@ -26,7 +26,7 @@ async-tungstenite = { version = "0.18", features = ["async-std-runtime", "async-
 serde = "1"
 serde_json = "1"
 fastrand = "1.0"
-gst_plugin_webrtc_protocol = { version = "0.9", path="protocol", package = "gst-plugin-webrtc-signalling-protocol" }
+gst_plugin_webrtc_protocol = { path="protocol", package = "gst-plugin-webrtc-signalling-protocol" }
 human_bytes = "0.3.1"
 
 [dev-dependencies]
