--- a/deny.toml
+++ b/deny.toml
@@ -9,6 +9,7 @@ ignore = [
     "RUSTSEC-2021-0059",
     "RUSTSEC-2021-0060",
     "RUSTSEC-2021-0061",
+    "RUSTSEC-2021-0145",
     # https://github.com/chronotope/chrono/issues/499
     "RUSTSEC-2020-0071",
     # sodiumoxide is deprecated
@@ -142,11 +143,6 @@ version = "0.5"
 name = "idna"
 version = "0.2"
 
-# image_hasher depends on an alpha version of base64
-[[bans.skip]]
-name = "base64"
-version = "0.20.0-alpha.1"
-
 # async-io / async-channel depend on an old version of concurrent-queue
 # https://github.com/smol-rs/async-channel/pull/50
 # https://github.com/smol-rs/async-io/pull/99
@@ -159,6 +155,23 @@ version = "1"
 [[bans.skip]]
 name = "gif"
 version = "0.11"
+
+# field-offset and nix depend on an older memoffset
+# https://github.com/Diggsey/rust-field-offset/pull/23
+# https://github.com/nix-rust/nix/pull/1885
+[[bans.skip]]
+name = "memoffset"
+version = "0.6"
+
+# librespot depends on an older env_logger
+[[bans.skip]]
+name = "env_logger"
+version = "0.9"
+
+# Various crates depend on an older version of hermit-abi
+[[bans.skip]]
+name = "hermit-abi"
+version = "0.1"
 
 [sources]
 unknown-registry = "deny"
