--- a/net/webrtchttp/Cargo.toml
+++ b/net/webrtchttp/Cargo.toml
@@ -20,6 +20,7 @@ parse_link_header = {version = "0.3", features = ["url"]}
 tokio = { version = "1.20.1", default-features = false, features = ["time", "rt-multi-thread"] }
 futures = "0.3.23"
 bytes = "1"
+async-recursion = "1.0.0"
 
 [lib]
 name = "gstwebrtchttp"
