--- a/video/gtk4/Cargo.toml
+++ b/video/gtk4/Cargo.toml
@@ -9,7 +9,7 @@ rust-version = "1.63"
 description = "GStreamer GTK 4 Sink element and Paintable widget"
 
 [dependencies]
-gtk = { package = "gtk4", git = "https://github.com/gtk-rs/gtk4-rs", branch = "0.5", version = "0.5", features = ["v4_6"] }
+gtk = { package = "gtk4", git = "https://github.com/gtk-rs/gtk4-rs", branch = "0.5", version = "0.5" }
 gdk_wayland = { package = "gdk4-wayland", git = "https://github.com/gtk-rs/gtk4-rs", branch = "0.5", version = "0.5", features = ["v4_4"], optional = true}
 gdk_x11 = { package = "gdk4-x11", git = "https://github.com/gtk-rs/gtk4-rs", branch = "0.5", version = "0.5", features = ["v4_4"], optional = true}
 
@@ -36,9 +36,9 @@ gst-plugin-version-helper = { version = "0.7", path="../../version-helper" }
 [features]
 default = []
 static = []
-wayland = ["gdk_wayland", "gst_gl", "gst_gl_wayland"]
-x11glx = ["gdk_x11", "gst_gl", "gst_gl_x11"]
-x11egl = ["gdk_x11", "gst_gl", "gst_gl_egl"]
+wayland = ["gtk/v4_6", "gdk_wayland", "gst_gl", "gst_gl_wayland"]
+x11glx = ["gtk/v4_6", "gdk_x11", "gst_gl", "gst_gl_x11"]
+x11egl = ["gtk/v4_6", "gdk_x11", "gst_gl", "gst_gl_egl"]
 capi = []
 doc = ["gst/v1_18"]
 
