--- a/utils/livesync/Cargo.toml
+++ b/utils/livesync/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "gst-plugin-livesync"
-version = "0.9.0-alpha.1"
+version = "0.9.2"
 authors = ["Jan Alexander Steffens (heftig) <jan.steffens@ltnglobal.com>"]
 license = "MPL-2.0"
 description = "Livesync Plugin"
